--- a/profile_web/templates/index.html
+++ b/profile_web/templates/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>My Resume HTML Bootstrap Template</title>
+  <title>DONGSU KANG's resume </title>
 
   <!-- Bootstrap -->
   <link href="{{url_for('static', filename = 'css/bootstrap.min.css')}}" rel="stylesheet">
@@ -29,11 +29,12 @@
   <div class="wrapper" id="wrapper">
     <header>
       <div class="banner row" id="banner">
-        <div class="parallax text-center" style="background-image: url_for('static', filename = 'img/1.jpg');">
+        <div class="parallax text-center" style= 'background-image: "{{url_for('static', filename = 'img/1.jpg')}};'>
           <div class="parallax-pattern-overlay">
             <div class="container text-center" style="height:600px;padding-top:170px;">
-              <a href="#"><img id="site-title" class=" wow fadeInDown" wow-data-delay="0.0s" wow-data-duration="0.9s" src=url_for('static', filename = "img/2.png") alt=""/></a>
-              <h2 class="intro"><a href="index.html">My Resume</a></h2>
+              <a href="#"><img id="site-title" class=" wow fadeInDown" wow-data-delay="0.0s" wow-data-duration="0.9s" src = "{{url_for('static', filename = 'img/2.png')}}" alt=""/></img></a>
+              <h2 class="intro"><a href="index.html">DONGSU KANG</a></h2>
+              <h3>Data Scientist</h3>
             </div>
           </div>
         </div>
@@ -48,7 +49,7 @@
                     <div class="navbar-collapse collapse">
                       <ul class="nav navbar-nav">
                         <li class="menuItem active"><a href="#wrapper">Home</a></li>
-                        <li class="menuItem"><a href="#aboutus">About Us</a></li>
+                        <li class="menuItem"><a href="#aboutus">About me</a></li>
                         <li class="menuItem"><a href="#specialties">Skills</a></li>
                         <li class="menuItem"><a href="#gallery">Portfolio</a></li>
                         <li class="menuItem"><a href="#feedback">Education</a></li>
@@ -69,12 +70,14 @@
       <div class="container">
         <div class="heading text-center">
           <h2>About Me</h2>
-          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros. Etiam ullamcorper sed lectus sit amet mattis. Morbi justo sem, cursus nec convallis a, pellentesque eu mi. Morbi hendrerit ultricies ligula </h3>
+          <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum.
+            Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros. Etiam ullamcorper sed lectus sit amet mattis.
+            Morbi justo sem, cursus nec convallis a, pellentesque eu mi. Morbi hendrerit ultricies ligula </h3>
         </div>
         <div class="row">
           <div class="col-md-6">
             <div class="papers text-center">
-              <img src=url_for('static', filename= "img/team/1.jpg") alt=""><br/>
+              <img src = "{{url_for('static', filename= 'img/team/1.jpg')}}" alt=""><br/>
               <a href="#"><b>Download my resume</b></a>
               <h4 class="">My Teacher John Vandeley</h4>
               <p>
@@ -85,7 +88,7 @@
           </div>
           <div class="col-md-6">
             <div class="papers text-center">
-              <img src=url_for('static', filename = "img/team/2.jpg") alt=""><br/>
+              <img src = "{{url_for('static', filename = "img/team/2.jpg")}}" alt=""><br/>
               <a href="#"><b>Download my resume</b></a>
               <h4 class="">My Teacher Stephanie Hellen</h4>
               <p>
@@ -134,7 +137,7 @@
 						<div class="progress-wrap ">
 							<h3>CSS</h3>
 							<div class="progress ">
-							  <div class="progress-bar color3 " role="progressbar " aria-valuenow="60 " aria-valuemin="0 " aria-valuemax="100 " style="width: 80% ">
+							  <div class="progress-bar color3 " role="progressbar " aria-valuenow="60 " aria-valuemin="0 " aria-valuemax="100 " style="width: 50% ">
 								<span class="bar-width ">80%</span>
 							  </div>
 							</div>
@@ -152,7 +155,7 @@
 				</div>
 
 				<div class="col-md-6 wow fadeInRight " data-wow-offset="0 " data-wow-delay="0.6s "">
-            <img src=url_for('static', filename = "img/team/6.jpg") class="img-responsive">
+            <img src="{{url_for('static', filename = "img/team/6.jpg")}}" class="img-responsive">
           </div>
         </div>
       </div>
@@ -163,21 +166,21 @@
             <div class="skills">
               <h3 class="main text-center">WEB DESIGN</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image: "{{url_for('static', filename = 'img/2.png')}}";">
                 </div>
                 <h5>HTML</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image: "{{url_for('static', filename = 'img/2.png')}}"">
                 </div>
                 <h5>CSS</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image:"{{ url_for('static', filename = 'img/2.png')}}"">
                 </div>
                 <h5>JAVASCRIPT</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
@@ -189,21 +192,21 @@
             <div class="skills">
               <h3 class="main text-center">PHOTOGRAPHY</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image: "{{url_for('static', filename = 'img/2.png')}}"">
                 </div>
                 <h5>adipiscing elit</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image: "{{url_for('static', filename = 'img/2.png')}}"">
                 </div>
                 <h5>adipiscing elit</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image: "{{url_for('static', filename = 'img/2.png')}}"">
                 </div>
                 <h5>adipiscing elit</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
@@ -215,21 +218,21 @@
             <div class="skills">
               <h3 class="main text-center">PROGRAMMING</h3>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image: "{{url_for('static', filename = 'img/2.png')}}"">
                 </div>
                 <h5>adipiscing elit</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')">
+                <div class="rm-thumb" style="background-image: "{{url_for('static', filename = 'img/2.png')}}"">
                 </div>
                 <h5>adipiscing elit</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
                 </p>
               </div>
               <div class="restitem clearfix">
-                <div class="rm-thumb" style="background-image: url_for('static', filename = 'img/2.png')>
+                <div class="rm-thumb" style= "background-image: "{{url_for("static", filename = "img/2.png")}}"">
                 </div>
                 <h5>adipiscing elit</h5>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi quis dolor sit amet lacus ultricies rutrum. Curabitur vitae fringilla elit. Sed at nunc congue, cursus erat ac, pellentesque eros.
@@ -257,7 +260,7 @@
               <!-- for Masonry column width -->
               <li>
                 <figure>
-                  <img src=url_for('static', filename = "img/work/1.jpg") alt="" />
+                  <img src = "{{url_for('static', filename = 'img/work/1.jpg')}}" alt="" />
                   <figcaption>
                     <h3>Vitae fringilla elit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -266,7 +269,7 @@
               </li>
               <li>
                 <figure>
-                  <img src = url_for('static', filename = 'img/2.png') alt="" />
+                  <img src = "{{url_for('static', filename = 'img/2.png')}}" alt="" />
                   <figcaption>
                     <h3>Vitae fringilla elit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -275,7 +278,7 @@
               </li>
               <li>
                 <figure>
-                  <img src= url_for('static', filename = "img/work/3.jpg") alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/3.jpg')}}" alt="" />
                   <figcaption>
                     <h3>Vitae fringilla elit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -284,7 +287,7 @@
               </li>
               <li>
                 <figure>
-                  <img src="img/work/4.jpg" alt="" />
+                  <img src = "{{url_for('static', filename = 'img/work/4.jpg')}}" alt="" />
                   <figcaption>
                     <h3>Vitae fringilla elit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -293,7 +296,7 @@
               </li>
               <li>
                 <figure>
-                  <img src="img/work/5.jpg" alt="" />
+                  <img src =  "{{url_for('static', filename = 'img/work/5.jpg')}}" alt="" />
                   <figcaption>
                     <h3>Vitae fringilla elit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -302,17 +305,7 @@
               </li>
               <li>
                 <figure>
-                  <img src="img/work/6.jpg" alt="" />
-                  <figcaption>
-                    <h3>Vitae fringilla elit</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-                  </figcaption>
-                </figure>
-              </li>
-
-              <li>
-                <figure>
-                  <img src="img/work/7.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/6.jpg')}}" alt="" />
                   <figcaption>
                     <h3>Vitae fringilla elit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -322,7 +315,17 @@
 
               <li>
                 <figure>
-                  <img src="img/work/8.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/7.jpg')}}" alt="" />
+                  <figcaption>
+                    <h3>Vitae fringilla elit</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                  </figcaption>
+                </figure>
+              </li>
+
+              <li>
+                <figure>
+                  <img src= "{{url_for('static', filename = 'img/work/8.jpg')}}" alt="" />
                   <figcaption>
                     <h3>Vitae fringilla elit</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
@@ -338,44 +341,44 @@
             <ul>
               <li>
                 <figure>
-                  <img src="img/work/1.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/1.jpg')}}" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/2.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/2.jpg')}}" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/3.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/3.jpg')}}" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/4.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/4.jpg')}}" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/5.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/5.jpg')}}" alt="" />
                 </figure>
               </li>
               <li>
                 <figure>
-                  <img src="img/work/6.jpg" alt="" />
-                </figure>
-              </li>
-
-              <li>
-                <figure>
-                  <img src="img/work/7.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/6.jpg')}}" alt="" />
                 </figure>
               </li>
 
               <li>
                 <figure>
-                  <img src="img/work/8.jpg" alt="" />
+                  <img src= "{{url_for('static', filename = 'img/work/7.jpg')}}" alt="" />
+                </figure>
+              </li>
+
+              <li>
+                <figure>
+                  <img src= "{{url_for('static', filename = 'img/work/8.jpg')}}" alt="" />
                 </figure>
               </li>
             </ul>
@@ -538,22 +541,22 @@
     </section>
 
   </div>
-  <script src="js/jquery.js"></script>
-  <script src="js/modernizr.js"></script>
+  <script src="{{url_for('static', filename = 'js/jquery.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/modernizr.js')}}"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/menustick.js"></script>
-  <script src="js/parallax.js"></script>
-  <script src="js/easing.js"></script>
-  <script src="js/wow.js"></script>
-  <script src="js/smoothscroll.js"></script>
-  <script src="js/masonry.js"></script>
-  <script src="js/imgloaded.js"></script>
-  <script src="js/classie.js"></script>
-  <script src="js/colorfinder.js"></script>
-  <script src="js/gridscroll.js"></script>
-  <script src="js/contact.js"></script>
-  <script src="js/common.js"></script>
+  <script src="{{url_for('static', filename = 'js/bootstrap.min.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/menustick.js')}}"></script>
+  <script src="{{url_for('static', filename ='js/parallax.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/easing.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/wow.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/smoothscroll.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/masonry.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/imgloaded.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/classie.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/colorfinder.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/gridscroll.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/contact.js')}}"></script>
+  <script src="{{url_for('static', filename = 'js/common.js')}}"></script>
   <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD8HeI8o-c1NppZA-92oYlXakhDPYR7XMY"></script>
   <script>
     wow = new WOW({}).init();
@@ -597,7 +600,7 @@
       google.maps.event.addDomListener(window, 'load', initialize_google_map);
     });
   </script>
-  <script src="contactform/contactform.js"></script>
+  <script src="{{url_for('static', filename = 'contactform/contactform.js')}}"></script>
 
 
 </body>
